k8s/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: ns1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-app
  template:
    metadata:
      labels:
        app: gateway-app
    spec:
      serviceAccountName: gateway-service-account
      containers:
        - name: gateway-container
          image: docker.io/library/deployment-aware-gw:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8080
