k8s/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: ns1
spec:
  selector:
    app: gateway-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
#      nodePort: 30080
  type: LoadBalancer
