k8s/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gw-ingress
  namespace: ns1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /gateway
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
      host: gateway.kube.local
